--- a/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsRainView.xib
+++ b/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsRainView.xib
@@ -294,11 +294,11 @@
                             </constraints>
                         </view>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A2k-E1-n3n">
-                            <rect key="frame" x="128" y="796" width="158" height="55"/>
+                            <rect key="frame" x="128" y="811" width="158" height="55"/>
                             <color key="backgroundColor" red="0.69411764705882351" green="0.25490196078431371" blue="0.047058823529411764" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="55" id="2m4-p8-06v"/>
-                                <constraint firstAttribute="width" constant="158" id="ycK-HH-bhB"/>
+                                <constraint firstAttribute="width" secondItem="A2k-E1-n3n" secondAttribute="height" multiplier="158:55" id="jA3-Q4-sER"/>
                             </constraints>
                             <state key="normal" title="Button"/>
                             <buttonConfiguration key="configuration" style="plain">
@@ -319,9 +319,16 @@
                                 <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                             </userDefinedRuntimeAttributes>
                             <connections>
-                                <action selector="combineCardsAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="Vrk-tb-MaB"/>
+                                <action selector="combineCardsAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="Ff5-id-vt5"/>
                             </connections>
                         </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MAS-cK-NHP">
+                            <rect key="frame" x="202" y="866" width="10" height="30"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="10" id="2W9-1F-soT"/>
+                            </constraints>
+                        </view>
                         <view hidden="YES" alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KTS-jC-bbb">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             <subviews>
@@ -385,8 +392,9 @@
                     </subviews>
                     <color key="backgroundColor" red="0.49803921569999998" green="0.52549019610000003" blue="0.60392156860000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
+                        <constraint firstItem="MAS-cK-NHP" firstAttribute="centerX" secondItem="lLp-Md-ud5" secondAttribute="centerX" id="0bK-h9-cFv"/>
+                        <constraint firstAttribute="bottom" secondItem="MAS-cK-NHP" secondAttribute="bottom" id="24r-rb-Nba"/>
                         <constraint firstItem="r9Y-vT-k1P" firstAttribute="top" secondItem="Q0x-jz-CEz" secondAttribute="bottom" constant="40" id="2mc-Qs-4TD"/>
-                        <constraint firstItem="r9Y-vT-k1P" firstAttribute="width" secondItem="lLp-Md-ud5" secondAttribute="width" multiplier="0.161836" id="3Fc-zx-i9T"/>
                         <constraint firstItem="KTS-jC-bbb" firstAttribute="top" secondItem="lLp-Md-ud5" secondAttribute="top" id="3MQ-Db-FR9"/>
                         <constraint firstItem="UHh-1F-MOs" firstAttribute="top" secondItem="r9Y-vT-k1P" secondAttribute="top" id="5Rb-9D-Zct"/>
                         <constraint firstAttribute="bottom" secondItem="KTS-jC-bbb" secondAttribute="bottom" id="8Yi-eg-nOC"/>
@@ -406,11 +414,11 @@
                         <constraint firstItem="Q0x-jz-CEz" firstAttribute="top" secondItem="5lj-Xy-MVW" secondAttribute="bottom" constant="10" id="Qk3-ZG-bf9"/>
                         <constraint firstItem="DjZ-D2-VCB" firstAttribute="centerX" secondItem="lLp-Md-ud5" secondAttribute="centerX" multiplier="1.5" id="Rit-KT-Ov9"/>
                         <constraint firstAttribute="bottom" secondItem="EsA-3R-2AC" secondAttribute="bottom" id="TjQ-Tc-zx1"/>
-                        <constraint firstAttribute="bottom" secondItem="A2k-E1-n3n" secondAttribute="bottom" constant="45" id="UhE-CT-DeO"/>
                         <constraint firstItem="q3T-ca-iYf" firstAttribute="top" secondItem="r9Y-vT-k1P" secondAttribute="bottom" constant="40" id="VPG-GT-srN"/>
                         <constraint firstItem="EsA-3R-2AC" firstAttribute="top" secondItem="lLp-Md-ud5" secondAttribute="top" id="VYF-3H-hHl"/>
                         <constraint firstItem="W6B-8m-9eU" firstAttribute="top" secondItem="q3T-ca-iYf" secondAttribute="top" id="b12-xK-VUd"/>
                         <constraint firstItem="5lj-Xy-MVW" firstAttribute="top" secondItem="lLp-Md-ud5" secondAttribute="top" constant="50" id="b47-Lk-JPW"/>
+                        <constraint firstItem="A2k-E1-n3n" firstAttribute="bottom" secondItem="MAS-cK-NHP" secondAttribute="top" id="byV-s5-RMa"/>
                         <constraint firstItem="KTS-jC-bbb" firstAttribute="leading" secondItem="lLp-Md-ud5" secondAttribute="leading" id="fVP-bA-fgl"/>
                         <constraint firstItem="5sG-49-mbF" firstAttribute="centerX" secondItem="lLp-Md-ud5" secondAttribute="centerX" id="gH0-mW-bxU"/>
                         <constraint firstItem="q3T-ca-iYf" firstAttribute="centerX" secondItem="r9Y-vT-k1P" secondAttribute="centerX" id="gip-9P-WiB"/>
@@ -420,7 +428,9 @@
                         <constraint firstItem="r9Y-vT-k1P" firstAttribute="centerX" secondItem="lLp-Md-ud5" secondAttribute="centerX" multiplier="0.5" id="mhE-w7-RfT"/>
                         <constraint firstAttribute="trailing" secondItem="EsA-3R-2AC" secondAttribute="trailing" id="nYF-Mn-9Y3"/>
                         <constraint firstItem="Q0x-jz-CEz" firstAttribute="height" secondItem="lLp-Md-ud5" secondAttribute="height" multiplier="0.25" id="oxN-34-XaY"/>
+                        <constraint firstItem="r9Y-vT-k1P" firstAttribute="height" secondItem="lLp-Md-ud5" secondAttribute="height" multiplier="0.172991" id="qZs-hq-KiE"/>
                         <constraint firstItem="W6B-8m-9eU" firstAttribute="centerX" secondItem="lLp-Md-ud5" secondAttribute="centerX" id="s6R-LJ-nbq"/>
+                        <constraint firstItem="MAS-cK-NHP" firstAttribute="height" secondItem="lLp-Md-ud5" secondAttribute="height" multiplier="0.0334821" id="uR6-tG-yZi"/>
                         <constraint firstItem="6pu-ql-lth" firstAttribute="top" secondItem="q3T-ca-iYf" secondAttribute="top" id="vQ2-F6-tKe"/>
                         <constraint firstItem="EsA-3R-2AC" firstAttribute="leading" secondItem="lLp-Md-ud5" secondAttribute="leading" id="vtf-h0-AIJ"/>
                         <constraint firstItem="6pu-ql-lth" firstAttribute="height" secondItem="q3T-ca-iYf" secondAttribute="height" id="x63-xQ-mFw"/>
@@ -488,6 +498,13 @@
                                     </attributedString>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SXn-Jm-f6S">
+                                    <rect key="frame" x="150" y="30" width="10" height="45"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="10" id="Ohp-KA-LVX"/>
+                                    </constraints>
+                                </view>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8d-eI-hg0">
                                     <rect key="frame" x="147.5" y="75" width="15" height="30"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
@@ -504,20 +521,29 @@
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstItem="mxD-Mn-LdH" firstAttribute="leading" secondItem="uZJ-LJ-69R" secondAttribute="leading" id="A6z-YA-Wtf"/>
+                                <constraint firstItem="SXn-Jm-f6S" firstAttribute="top" secondItem="1Yw-XU-u7W" secondAttribute="top" id="CAz-ji-QzH"/>
                                 <constraint firstItem="1Yw-XU-u7W" firstAttribute="centerX" secondItem="uZJ-LJ-69R" secondAttribute="centerX" id="DA9-oQ-w7S"/>
                                 <constraint firstItem="c8d-eI-hg0" firstAttribute="height" secondItem="1Yw-XU-u7W" secondAttribute="height" multiplier="1.2" id="LGd-Xd-7wg"/>
-                                <constraint firstItem="c8d-eI-hg0" firstAttribute="top" secondItem="1Yw-XU-u7W" secondAttribute="top" constant="45" id="McL-9z-U10"/>
                                 <constraint firstItem="1Yw-XU-u7W" firstAttribute="top" secondItem="uZJ-LJ-69R" secondAttribute="top" constant="30" id="NCh-80-lva"/>
                                 <constraint firstItem="5Bq-Wp-Eej" firstAttribute="height" secondItem="uZJ-LJ-69R" secondAttribute="height" multiplier="0.616333" id="TNO-Ok-z6W"/>
                                 <constraint firstItem="mxD-Mn-LdH" firstAttribute="height" secondItem="uZJ-LJ-69R" secondAttribute="height" multiplier="0.55" id="Ti5-Fh-I91"/>
                                 <constraint firstItem="c8d-eI-hg0" firstAttribute="centerX" secondItem="uZJ-LJ-69R" secondAttribute="centerX" id="Zss-jL-hLW"/>
                                 <constraint firstItem="1Yw-XU-u7W" firstAttribute="height" secondItem="uZJ-LJ-69R" secondAttribute="height" multiplier="0.0770416" id="chY-nt-8SO"/>
+                                <constraint firstItem="SXn-Jm-f6S" firstAttribute="centerX" secondItem="uZJ-LJ-69R" secondAttribute="centerX" id="eW0-HV-B4P"/>
                                 <constraint firstItem="mxD-Mn-LdH" firstAttribute="top" secondItem="uZJ-LJ-69R" secondAttribute="top" id="g5k-l1-D2b"/>
                                 <constraint firstItem="5Bq-Wp-Eej" firstAttribute="centerX" secondItem="uZJ-LJ-69R" secondAttribute="centerX" id="iAk-gq-Ovq"/>
+                                <constraint firstItem="c8d-eI-hg0" firstAttribute="top" secondItem="SXn-Jm-f6S" secondAttribute="bottom" id="pTC-zG-vGt"/>
                                 <constraint firstAttribute="bottom" secondItem="5Bq-Wp-Eej" secondAttribute="bottom" id="r0i-cD-EFB"/>
                                 <constraint firstAttribute="trailing" secondItem="mxD-Mn-LdH" secondAttribute="trailing" id="yaE-i9-OWg"/>
                             </constraints>
                         </view>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mammon1" translatesAutoresizingMaskIntoConstraints="NO" id="6r7-hV-H7p">
+                            <rect key="frame" x="32" y="50" width="350" height="196"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="196" id="846-4s-83D"/>
+                                <constraint firstAttribute="width" constant="350" id="Za1-m3-dnc"/>
+                            </constraints>
+                        </imageView>
                         <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_redenvelope_click" translatesAutoresizingMaskIntoConstraints="NO" id="KM6-iW-BSr">
                             <rect key="frame" x="0.0" y="271.5" width="97" height="144"/>
                             <constraints>
@@ -561,13 +587,6 @@
                                 <constraint firstItem="CPE-GX-UqE" firstAttribute="top" secondItem="Eqy-K3-5tk" secondAttribute="top" id="gxu-H7-tcW"/>
                             </constraints>
                         </view>
-                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mammon1" translatesAutoresizingMaskIntoConstraints="NO" id="6r7-hV-H7p">
-                            <rect key="frame" x="32" y="50" width="350" height="196"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="196" id="846-4s-83D"/>
-                                <constraint firstAttribute="width" constant="350" id="Za1-m3-dnc"/>
-                            </constraints>
-                        </imageView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vvp-tm-3gR">
                             <rect key="frame" x="354" y="48" width="40" height="40"/>
                             <constraints>
@@ -593,7 +612,7 @@
                                 <action selector="closeBtnAction:" destination="iN0-l3-epB" eventType="touchUpInside" id="Nxa-bR-Ku7"/>
                             </connections>
                         </button>
-                        <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.0" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_redbag_game" translatesAutoresizingMaskIntoConstraints="NO" id="Hzl-9X-Vwu">
+                        <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_redbag_game" translatesAutoresizingMaskIntoConstraints="NO" id="Hzl-9X-Vwu">
                             <rect key="frame" x="-30" y="670.5" width="240" height="285.5"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="Hzl-9X-Vwu" secondAttribute="height" multiplier="216:257" id="NQz-CQ-8AC"/>
@@ -612,6 +631,7 @@
                         <constraint firstAttribute="bottom" secondItem="yop-nb-ipe" secondAttribute="bottom" constant="-10" id="2Kc-w7-KoT"/>
                         <constraint firstItem="6r7-hV-H7p" firstAttribute="centerX" secondItem="Z5W-E5-F5r" secondAttribute="centerX" id="3U9-Fn-5C0"/>
                         <constraint firstAttribute="trailing" secondItem="vvp-tm-3gR" secondAttribute="trailing" constant="20" id="7NP-hh-ITK"/>
+                        <constraint firstItem="SXn-Jm-f6S" firstAttribute="height" secondItem="Z5W-E5-F5r" secondAttribute="height" multiplier="0.0502232" id="9pY-gK-czP"/>
                         <constraint firstItem="KM6-iW-BSr" firstAttribute="top" secondItem="uZJ-LJ-69R" secondAttribute="top" constant="-50" id="BSO-vp-cBo"/>
                         <constraint firstItem="uZJ-LJ-69R" firstAttribute="width" secondItem="Z5W-E5-F5r" secondAttribute="width" multiplier="0.75" id="CfL-PI-D7X"/>
                         <constraint firstItem="SuI-Re-pzy" firstAttribute="height" secondItem="Z5W-E5-F5r" secondAttribute="height" multiplier="0.160714" id="G2g-wt-sKR"/>
@@ -1099,7 +1119,6 @@
                 <outlet property="closeButton" destination="iIQ-1T-EZ8" id="bq9-Fl-P0L"/>
                 <outlet property="closeGiftBagButton" destination="dTK-EY-egz" id="Tfa-RY-47f"/>
                 <outlet property="countDownLabelCenter" destination="Zss-jL-hLW" id="a4r-KT-QeU"/>
-                <outlet property="countDownLabelTop" destination="McL-9z-U10" id="sxe-fg-TpQ"/>
                 <outlet property="countDownTitleLabel" destination="1Yw-XU-u7W" id="ndx-KV-jZe"/>
                 <outlet property="countdownLab" destination="c8d-eI-hg0" id="weW-1S-jhW"/>
                 <outlet property="giftImageView" destination="DRu-W9-Wj0" id="Dhr-na-8WS"/>
