--- a/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsRainView.xib
+++ b/HYNewNest/Utility(工具类)/BTTAnimationPopView/RedPacketsRainView.xib
@@ -502,6 +502,7 @@
                                     <rect key="frame" x="150" y="30" width="10" height="45"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
+                                        <constraint firstAttribute="height" constant="45" id="35F-Uf-yqF"/>
                                         <constraint firstAttribute="width" constant="10" id="Ohp-KA-LVX"/>
                                     </constraints>
                                 </view>
@@ -631,7 +632,6 @@
                         <constraint firstAttribute="bottom" secondItem="yop-nb-ipe" secondAttribute="bottom" constant="-10" id="2Kc-w7-KoT"/>
                         <constraint firstItem="6r7-hV-H7p" firstAttribute="centerX" secondItem="Z5W-E5-F5r" secondAttribute="centerX" id="3U9-Fn-5C0"/>
                         <constraint firstAttribute="trailing" secondItem="vvp-tm-3gR" secondAttribute="trailing" constant="20" id="7NP-hh-ITK"/>
-                        <constraint firstItem="SXn-Jm-f6S" firstAttribute="height" secondItem="Z5W-E5-F5r" secondAttribute="height" multiplier="0.0502232" id="9pY-gK-czP"/>
                         <constraint firstItem="KM6-iW-BSr" firstAttribute="top" secondItem="uZJ-LJ-69R" secondAttribute="top" constant="-50" id="BSO-vp-cBo"/>
                         <constraint firstItem="uZJ-LJ-69R" firstAttribute="width" secondItem="Z5W-E5-F5r" secondAttribute="width" multiplier="0.75" id="CfL-PI-D7X"/>
                         <constraint firstItem="SuI-Re-pzy" firstAttribute="height" secondItem="Z5W-E5-F5r" secondAttribute="height" multiplier="0.160714" id="G2g-wt-sKR"/>
@@ -1119,6 +1119,7 @@
                 <outlet property="closeButton" destination="iIQ-1T-EZ8" id="bq9-Fl-P0L"/>
                 <outlet property="closeGiftBagButton" destination="dTK-EY-egz" id="Tfa-RY-47f"/>
                 <outlet property="countDownLabelCenter" destination="Zss-jL-hLW" id="a4r-KT-QeU"/>
+                <outlet property="countDownLabelTop" destination="35F-Uf-yqF" id="O7g-hR-slo"/>
                 <outlet property="countDownTitleLabel" destination="1Yw-XU-u7W" id="ndx-KV-jZe"/>
                 <outlet property="countdownLab" destination="c8d-eI-hg0" id="weW-1S-jhW"/>
                 <outlet property="giftImageView" destination="DRu-W9-Wj0" id="Dhr-na-8WS"/>
